fix(layout): grid responsive and app spacing

--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -1,7 +1,7 @@
 .card-list {
-  width: 85vw;
+  max-width: 85vw;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   grid-gap: 20px;
 }
